@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl-Critic/Perl-Critic-1.108.ebuild,v 1.2 2010/07/27 15:01:56 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl-Critic/Perl-Critic-1.108.ebuild,v 1.3 2010/10/10 17:48:58 armin76 Exp $
 
 EAPI=3
 
@@ -14,7 +14,7 @@ inherit perl-module
 DESCRIPTION="Critique Perl source code for best-practices"
 
 SLOT="0"
-KEYWORDS="~amd64 ~x86 ~amd64-linux ~ppc-macos"
+KEYWORDS="~amd64 ~sparc ~x86 ~amd64-linux ~ppc-macos"
 IUSE="test"
 
 RDEPEND=">=virtual/perl-Module-Pluggable-3.1
