@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Perl-Critic
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl-Critic/ChangeLog,v 1.66 2010/09/03 18:36:39 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl-Critic/ChangeLog,v 1.67 2010/10/10 17:48:58 armin76 Exp $
+
+  10 Oct 2010; Raúl Porcel <armin76@gentoo.org> Perl-Critic-1.108.ebuild,
+  Perl-Critic-1.109.ebuild:
+  Add ~sparc wrt #328393
 
   03 Sep 2010; Fabian Groffen <grobian@gentoo.org> Perl-Critic-1.109.ebuild:
   Marked ~x86-macos, ~x86-linux, ~sparc-solaris, bug #328393
