@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/PPIx-Utilities
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/PPIx-Utilities/ChangeLog,v 1.3 2010/09/03 22:15:01 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/PPIx-Utilities/ChangeLog,v 1.4 2010/10/10 17:45:44 armin76 Exp $
+
+  10 Oct 2010; Raúl Porcel <armin76@gentoo.org>
+  PPIx-Utilities-1.000001.ebuild:
+  Add ~sparc wrt #328393
 
   03 Sep 2010; Fabian Groffen <grobian@gentoo.org>
   PPIx-Utilities-1.000001.ebuild:
